Update documentation for release

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,6 +16,8 @@ markdown_extensions:
 pages:
 - About: index.md
 - Installation: install.md
+- Webhooks (Notifications): webhook.md
+- Contributions, Payments and Customers: contribution.md
 - Recurring Contributions (Subscriptions): recur.md
 - Advanced:
   - API: api.md
