Update mkdocs.yml to new format

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,14 +6,15 @@ markdown_extensions:
   - admonition
   - def_list
   - codehilite
-  - toc(permalink=true)
+  - toc:
+      permalink: true
   - pymdownx.superfences
   - pymdownx.inlinehilite
   - pymdownx.tilde
   - pymdownx.betterem
   - pymdownx.mark
 
-pages:
+nav:
 - About: index.md
 - Installation: install.md
 - Webhooks (Notifications): webhook.md
