--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,7 +14,7 @@ markdown_extensions:
   - pymdownx.betterem
   - pymdownx.mark
 
-nav:
+pages:
 - About: index.md
 - Installation: install.md
 - Webhooks (Notifications): webhook.md
