Send email receipts from Stripe by default (as this was what 5.x did)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,7 @@ pages:
 - About: index.md
 - Examples / Screenshots: examples.md
 - Installation: install.md
+- Setup: setup.md
 - Webhooks (Notifications): webhook.md
 - Contributions, Payments and Customers: contribution.md
 - Recurring Contributions (Subscriptions): recur.md
