--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,7 +25,7 @@ nav:
 - Recurring Contributions (Subscriptions): recur.md
 - Advanced:
   - API: api.md
-  - Events (jQuery): events.md
+  - Events and custom form integrations: events.md
   - Hooks: hooks.md
   - Testing: testing.md
 - Release Notes: release/release_notes.md
