--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,7 @@
 site_name: Stripe Payment Processor (https://stripe.com)
 repo_url: https://lab.civicrm.org/extensions/stripe
-theme: material
+theme: 
+  name: material
 markdown_extensions:
   - attr_list
   - admonition
