--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: Stripe Payment Processor (https://stripe.com)
 repo_url: https://lab.civicrm.org/extensions/stripe
-theme: 
+theme:
   name: material
 markdown_extensions:
   - attr_list
@@ -22,6 +22,7 @@ nav:
 - Setup: setup.md
 - Webhooks (Notifications): webhook.md
 - FAQs: faqs.md
+- Integrations: integration.md
 - Recurring Contributions (Subscriptions): recur.md
 - Advanced:
   - API: api.md
