--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,4 +29,4 @@ nav:
   - Events and custom form integrations: events.md
   - Hooks: hooks.md
   - Testing: testing.md
-- Release Notes: release/release_notes.md
+- Release Notes: releasenotes.md
