add composer's package name

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,6 @@
 {
+    "name": "civicrm/stripe",
+    "description": "Stripe Payment Processor",
     "require": {
         "stripe/stripe-php": "^7"
     }
